# uripper.github.io

./: .gitignore  .hintrc  Cargo.toml  Gemfile  config.toml  home.css  homepages.css  index.css  index.html  package-lock.json  package.json  robots.txt  search_index.en.js  style.css  work.css  workpages.css  zwicky.css
.github/workflows/: main.yml
_site/: 404.html  atom.xml  home.css  index.css  index.html  style.css  work.css  workpages.css
_site/home/: index.html
_site/js/: button.js  game_of_life.js
_site/work/: index.html
assets/backgrounds/: descriptiontext.afphoto
content/home/: projects.md
content/work/: _index.md
home/: index.html
home/about/: index.html
home/projects/: index.html
js/: button.js  game_of_life.js  game_of_likelifekinda.js  home_page.js
portfolio/: .gitignore  config.toml  tsconfig.json
portfolio/content/: _index.md
portfolio/public/: home.css  search_index.en.js  work.css  workpages.css
portfolio/sass/: home.scss  index.scss  style.scss  work.scss  workpages.scss
portfolio/src/: lava_lamp.ts
portfolio/templates/: base.html  home.html  index.html  work.html
public/: atom.xml  home.css  index.html  robots.txt  search_index.en.js  sitemap.xml  work.css
public/home/: index.html
public/js/: lava_lamp.js.map
public/work/: index.html
sass/: _extend.scss  homepages.scss  index.scss  workpages.scss
src/: build.rs  frontend.rs  lava_lamp.ts  main.rs
static/js/: button.js
templates/: home-pages.html  home.html  work-pages.html
work/: index.html
work/freelance/: index.html
work/nightingale/: index.html
(+31 files in other folders)
