[package]
name = "uripper_github_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="=0.13"
actix-web={version ="4", default-features = false}
actix-files="0.6.2"
wasm-bindgen = "0.2"
wasm-pack = "0.11"
yew = "0.20"
yew-router = "0.17"


[profile.release]
lto = true
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = ["console"]